First two slides

--- a/Wk2Presentation.html
+++ b/Wk2Presentation.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Visible Infrared Imaging Radiometer Suite</title>
+    <title>Visible Infrared Imaging Radiometer Suite (VIIRS)</title>
     <meta charset="utf-8" />
     <meta name="author" content="Gavin Rolls" />
+    <meta name="date" content="2024-01-16" />
     <script src="libs/header-attrs/header-attrs.js"></script>
-    <link rel="stylesheet" href="style_mono_light.css" type="text/css" />
+    <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
 .title[
-# Visible Infrared Imaging Radiometer Suite
+# Visible Infrared Imaging Radiometer Suite (VIIRS)
 ]
 .subtitle[
 ## NASA’s Newest Light Emissions Sensor
@@ -20,11 +21,8 @@ class: center, middle, inverse, title-slide
 .author[
 ### Gavin Rolls
 ]
-.institute[
-### Centre for Adavnced Spatial Analysis
-]
 .date[
-### 16/01/2024
+### 16 January 2024
 ]
 
 ---
@@ -32,7 +30,55 @@ class: center, middle, inverse, title-slide
 
 
 
-???
+
+
+# What is VIIRS?
+
+.pull-left[
+* Visual Infrared Imaging Radiometer Suite
+* Owned and operated by NASA and NOAA (National Oceanic and Atmospheric Administration)
+* Collects Environmental Data Records (NOAA, 2013)
+
+* Instrument is on two Satellites 
+  * Suomi NPP - Launched 28 October 2011 from Vandenberg Air Force Base
+  * NOAA-20 - Launched 10 November 2017 from Vandenberg Air Force Base
+  
+* Monitors a number of phenomena including:
+  * Light Emissions (Earth at Night)
+  * Ocean Colour and Aerosols
+  * Cloud Particle Size and Cloud Cover
+  * Fires
+]
+
+.pull-right[
+&lt;img src="img/Night.jpg" width="90%" style="display: block; margin: auto;" /&gt;
+.center[Composite of Earth at Night (NOAA)]
+&lt;img src="img/Suomi.png" width="90%" style="display: block; margin: auto;" /&gt;
+.center[Suomi NPP Satellite (NASA)]
+]
+---
+
+# Specifications
+
+* Spectral Resolution: Monitors 20 wavelength bands in the visual and infrared portions of the electromagnetic spectrum
+* Temporal Resolution: Entire surface of the earth is captured twice a day
+* Spatial Resolution
+  * 375m for Ocean Colour/Aerosol Bands
+  * 500m for other bands
+  
+(USGS)
+
+.pull-right[
+&lt;img src="img/Bands.png" width="90%" style="display: block; margin: auto;" /&gt;
+.center[EM Reflective Bands of VIIRS (NOAA, 2013)]
+
+---
+
+# Applications of VIIRS
+
+---
+
+# Reflection
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
