--- a/Wk2Presentation.html
+++ b/Wk2Presentation.html
@@ -16,7 +16,7 @@ class: center, middle, inverse, title-slide
 # Visible Infrared Imaging Radiometer Suite (VIIRS)
 ]
 .subtitle[
-## NASA’s Newest Light Emissions Sensor
+## NASA’s Newest Light Emissions &amp; Environmental Sensor
 ]
 .author[
 ### Gavin Rolls
@@ -35,7 +35,7 @@ class: center, middle, inverse, title-slide
 # What is VIIRS?
 
 .pull-left[
-* Visual Infrared Imaging Radiometer Suite
+* **Visual Infrared Imaging Radiometer Suite**
 * Owned and operated by NASA and NOAA (National Oceanic and Atmospheric Administration)
 * Collects Environmental Data Records (NOAA, 2013)
 
@@ -52,25 +52,47 @@ class: center, middle, inverse, title-slide
 
 .pull-right[
 &lt;img src="img/Night.jpg" width="90%" style="display: block; margin: auto;" /&gt;
+
 .center[Composite of Earth at Night (NOAA)]
+
 &lt;img src="img/Suomi.png" width="90%" style="display: block; margin: auto;" /&gt;
+
 .center[Suomi NPP Satellite (NASA)]
+
 ]
 ---
 
 # Specifications
 
-* Spectral Resolution: Monitors 20 wavelength bands in the visual and infrared portions of the electromagnetic spectrum
-* Temporal Resolution: Entire surface of the earth is captured twice a day
-* Spatial Resolution
+.pull-left[
+* **Spectral Resolution**: 
+  * Monitors 20 wavelength bands in the visual and infrared portions of the electromagnetic spectrum
+  * Frequency range is 0.4 - 12.49µm
+  * Most bands are visible or near infrared
+
+* **Temporal Resolution**: 
+  * Entire surface of the earth is captured twice a day between the two satellites.
+  * Generated products range from daily to yearly.
+
+* **Spatial Resolution**:
   * 375m for Ocean Colour/Aerosol Bands
-  * 500m for other bands
-  
+  * 750m for other bands
+  * Products also resampled to 500m, 1000m, and 5600m for use across larger areas
+
 (USGS)
+]
 
 .pull-right[
 &lt;img src="img/Bands.png" width="90%" style="display: block; margin: auto;" /&gt;
-.center[EM Reflective Bands of VIIRS (NOAA, 2013)]
+
+.center[EM Reflective Bands of VIIRS (NOAA, 2013)\n]
+
+&lt;img src="img/Thermalbands.png" width="90%" style="display: block; margin: auto;" /&gt;
+
+.center[EM Thermal Bands of VIIRS (NOAA, 2013)]
+
+]
+
 
 ---
 
