Added image and begun applications work

--- a/Wk2Presentation.html
+++ b/Wk2Presentation.html
@@ -65,16 +65,16 @@ class: center, middle, inverse, title-slide
 # Specifications
 
 .pull-left[
-* **Spectral Resolution**: 
+**Spectral Resolution**: 
   * Monitors 20 wavelength bands in the visual and infrared portions of the electromagnetic spectrum
   * Frequency range is 0.4 - 12.49µm
   * Most bands are visible or near infrared
 
-* **Temporal Resolution**: 
+**Temporal Resolution**: 
   * Entire surface of the earth is captured twice a day between the two satellites.
   * Generated products range from daily to yearly.
 
-* **Spatial Resolution**:
+**Spatial Resolution**:
   * 375m for Ocean Colour/Aerosol Bands
   * 750m for other bands
   * Products also resampled to 500m, 1000m, and 5600m for use across larger areas
@@ -93,14 +93,39 @@ class: center, middle, inverse, title-slide
 
 ]
 
-
 ---
 
 # Applications of VIIRS
 
+.pull-left[
+**Fire Monitoring**: 
+  * Using VIIRS 375m products for fire detection (Olivia &amp; Schroeder, 2015)
+  * M13 Longwave Infrared (3.97-4.13µm) designed to identify fires
+  * VIIRS has higher sensitivity to small fires versus other products like Landsat (some dependency on ecosystem type being observed)
+  * Twice daily visits to areas of interest is useful for mapping quickly evolving fires
+  * VIIRS assessments of long term fires in California is consistent with airborne measurement
+
+**Light Emissions**: 
+  * Light Emissions data as a proxy for economic activity (Mellander et al., 2015)
+  * Day-Night Band (0.5 - 0.5µm) designed to capture lights from Earth's surface at night
+  * Is often used to measure urban development (Florida, 2008) but can it be applied to estimate the extent of economic activity?
+
+]
+
+.pull-right[
+
+
+]
+
 ---
 
 # Reflection
+
+---
+
+# References
+
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
