--- a/Wk2Presentation.html
+++ b/Wk2Presentation.html
@@ -105,15 +105,17 @@ class: center, middle, inverse, title-slide
   * Twice daily visits to areas of interest is useful for mapping quickly evolving fires
   * VIIRS assessments of long term fires in California is consistent with airborne measurement
 
-**Light Emissions**: 
-  * Light Emissions data as a proxy for economic activity (Mellander et al., 2015)
-  * Day-Night Band (0.5 - 0.5µm) designed to capture lights from Earth's surface at night
-  * Is often used to measure urban development (Florida, 2008) but can it be applied to estimate the extent of economic activity?
+&lt;img src="img/Fires2020.jpg" width="90%" style="display: block; margin: auto;" /&gt;
 
+.center[Cumulative Fire Intensity 2020 (NASA)]
 ]
 
 .pull-right[
 
+**Light Emissions**: 
+  * Light Emissions data as a proxy for economic activity (Mellander et al., 2015)
+  * Day-Night Band (0.5 - 0.5µm) designed to capture lights from Earth's surface at night
+  * Is often used to measure urban development (Florida, 2008) but can it be applied to estimate the extent of economic activity?
 
 ]
 
