Test commit for host

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ class: center, middle, inverse, title-slide
 
 &lt;img src="img/Fires2020.jpg" width="90%" style="display: block; margin: auto;" /&gt;
 
-.center[Cumulative Fire Intensity 2020 (NASA)]
+.center[Cumulative Fire Intensity for 2020 (NASA)]
 ]
 
 .pull-right[
@@ -116,7 +116,7 @@ class: center, middle, inverse, title-slide
   * Light Emissions data as a proxy for economic activity (Mellander et al., 2015)
   * Day-Night Band (0.5 - 0.5µm) designed to capture lights from Earth's surface at night
   * Is often used to measure urban development (Florida, 2008) but can it be applied to estimate the extent of economic activity?
-
+* 
 ]
 
 ---
