--- a/Wk2Presentation.html
+++ b/Wk2Presentation.html
@@ -100,7 +100,7 @@ class: center, middle, inverse, title-slide
 
 .pull-left[
 **Fire Monitoring**: 
-  * Using VIIRS 375m products for fire detection &lt;a name=cite-olivaAssessmentVIIRS375m2015&gt;&lt;/a&gt;[Oliva and Schroeder (2015)](#bib-olivaAssessmentVIIRS375m2015)
+  * Using VIIRS 375m products for fire detection - &lt;a name=cite-olivaAssessmentVIIRS375m2015&gt;&lt;/a&gt;[Oliva and Schroeder (2015)](#bib-olivaAssessmentVIIRS375m2015)
   * M13 Longwave Infrared (3.97-4.13µm) designed to identify fires
   * VIIRS has higher sensitivity to small fires versus other products like Landsat (some dependency on ecosystem type being observed)
   * Twice daily visits to areas of interest is useful for mapping quickly evolving fires
@@ -128,7 +128,6 @@ class: center, middle, inverse, title-slide
 class: title-slide, top, left, inverse
 background-image: url('img/Lights.png')
 background-size: cover
-text-color: red
 
 # Reflection
 
@@ -144,7 +143,42 @@ Image from &lt;a name=cite-nasaEOSDISWorldview&gt;&lt;/a&gt;[NASA (2024c)](#bib-
 
 # References
 
+&lt;a name=bib-floridaRiseMegaregion2008a&gt;&lt;/a&gt;[Florida, R., T. Gulden, and
+C. Mellander](#cite-floridaRiseMegaregion2008a) (2008). "The rise of
+the mega-region". In: _Cambridge Journal of Regions, Economy and
+Society_ 1.3, pp. 459-476.
 
+&lt;a name=bib-mellanderNightTimeLightData2015&gt;&lt;/a&gt;[Mellander, C., J.
+Lobo, K. Stolarick, et al.](#cite-mellanderNightTimeLightData2015)
+(2015). "Night-Time Light Data: A Good Proxy Measure for Economic
+Activity?" In: _PLOS ONE_ 10.10. Publisher: Public Library of Science,
+p. e0139779.
+
+&lt;a name=bib-nasaEOSDISWorldview&gt;&lt;/a&gt;[NASA](#cite-nasaEOSDISWorldview)
+(2024c). _EOSDIS Worldview_.
+
+&lt;a name=bib-nasaSVSActiveFires&gt;&lt;/a&gt;[NASA](#cite-nasaSVSActiveFires)
+(2024b). _SVS: Active Fires As Observed by VIIRS, 2020_.
+
+&lt;a name=bib-nasaSuomiNPPNASA&gt;&lt;/a&gt;[NASA](#cite-nasaSuomiNPPNASA)
+(2024a). _Suomi NPP - NASA Science_.
+
+&lt;a
+name=bib-noaaOurEarthNight2012&gt;&lt;/a&gt;[NOAA](#cite-noaaOurEarthNight2012)
+(2012). _Our Earth, at night_.
+
+&lt;a
+name=bib-noaaNOAATechnicalReport2013&gt;&lt;/a&gt;[NOAA](#cite-noaaNOAATechnicalReport2013)
+(2013). _NOAA Technical Report NESDIS 142_. Department of Commerce,
+United States of America.
+
+&lt;a name=bib-olivaAssessmentVIIRS375m2015&gt;&lt;/a&gt;[Oliva, P. and W.
+Schroeder](#cite-olivaAssessmentVIIRS375m2015) (2015). "Assessment of
+VIIRS 375m active fire detection product for direct burned area
+mapping". In: _Remote Sensing of Environment_ 160, pp. 144-155.
+
+&lt;a name=bib-usgsLPDAACVIIRS&gt;&lt;/a&gt;[USGS](#cite-usgsLPDAACVIIRS) (2024).
+_LP DAAC - VIIRS Overview_.
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
