--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@ class: center, middle, inverse, title-slide
 
 
 
+
 # What is VIIRS?
 
 .pull-left[
 * **Visual Infrared Imaging Radiometer Suite**
 * Owned and operated by NASA and NOAA (National Oceanic and Atmospheric Administration)
-* Collects Environmental Data Records (NOAA, 2013)
-
+* Collects Environmental Data Records -
+&lt;a name=cite-noaaNOAATechnicalReport2013&gt;&lt;/a&gt;[NOAA (2013)](#bib-noaaNOAATechnicalReport2013)
 * Instrument is on two Satellites 
   * Suomi NPP - Launched 28 October 2011 from Vandenberg Air Force Base
   * NOAA-20 - Launched 10 November 2017 from Vandenberg Air Force Base
@@ -53,11 +54,11 @@ class: center, middle, inverse, title-slide
 .pull-right[
 &lt;img src="img/Night.jpg" width="90%" style="display: block; margin: auto;" /&gt;
 
-.center[Composite of Earth at Night (NOAA)]
+.center[Composite of Earth at Night - &lt;a name=cite-noaaOurEarthNight2012&gt;&lt;/a&gt;[NOAA (2012)](#bib-noaaOurEarthNight2012)]
 
 &lt;img src="img/Suomi.png" width="90%" style="display: block; margin: auto;" /&gt;
 
-.center[Suomi NPP Satellite (NASA)]
+.center[Suomi NPP Satellite - &lt;a name=cite-nasaSuomiNPPNASA&gt;&lt;/a&gt;[NASA (2024a)](#bib-nasaSuomiNPPNASA)]
 
 ]
 ---
@@ -79,17 +80,18 @@ class: center, middle, inverse, title-slide
   * 750m for other bands
   * Products also resampled to 500m, 1000m, and 5600m for use across larger areas
 
-(USGS)
+&lt;a name=cite-usgsLPDAACVIIRS&gt;&lt;/a&gt;[USGS (2024)](#bib-usgsLPDAACVIIRS)
+
 ]
 
 .pull-right[
 &lt;img src="img/Bands.png" width="90%" style="display: block; margin: auto;" /&gt;
 
-.center[EM Reflective Bands of VIIRS (NOAA, 2013)\n]
+.center[EM Reflective Bands of VIIRS - [NOAA (2013)](#bib-noaaNOAATechnicalReport2013)]
 
 &lt;img src="img/Thermalbands.png" width="90%" style="display: block; margin: auto;" /&gt;
 
-.center[EM Thermal Bands of VIIRS (NOAA, 2013)]
+.center[EM Thermal Bands of VIIRS - [NOAA (2013)](#bib-noaaNOAATechnicalReport2013)]
 
 ]
 
@@ -99,7 +101,7 @@ class: center, middle, inverse, title-slide
 
 .pull-left[
 **Fire Monitoring**: 
-  * Using VIIRS 375m products for fire detection (Olivia &amp; Schroeder, 2015)
+  * Using VIIRS 375m products for fire detection - &lt;a name=cite-olivaAssessmentVIIRS375m2015&gt;&lt;/a&gt;[Oliva and Schroeder (2015)](#bib-olivaAssessmentVIIRS375m2015)
   * M13 Longwave Infrared (3.97-4.13µm) designed to identify fires
   * VIIRS has higher sensitivity to small fires versus other products like Landsat (some dependency on ecosystem type being observed)
   * Twice daily visits to areas of interest is useful for mapping quickly evolving fires
@@ -107,27 +109,77 @@ class: center, middle, inverse, title-slide
 
 &lt;img src="img/Fires2020.jpg" width="90%" style="display: block; margin: auto;" /&gt;
 
-.center[Cumulative Fire Intensity for 2020 (NASA)]
+.center[Cumulative Fire Intensity for 2020 - &lt;a name=cite-nasaSVSActiveFires&gt;&lt;/a&gt;[NASA (2024b)](#bib-nasaSVSActiveFires)]
 ]
 
 .pull-right[
 
 **Light Emissions**: 
-  * Light Emissions data as a proxy for economic activity (Mellander et al., 2015)
+  * Light Emissions data as a proxy for economic activity? - &lt;a name=cite-mellanderNightTimeLightData2015&gt;&lt;/a&gt;[Mellander, Lobo, Stolarick, and Matheson (2015)](#bib-mellanderNightTimeLightData2015)
   * Day-Night Band (0.5 - 0.5µm) designed to capture lights from Earth's surface at night
-  * Is often used to measure urban development (Florida, 2008) but can it be applied to estimate the extent of economic activity?
-* 
+  * Is often used to measure urban development (&lt;a name=cite-floridaRiseMegaregion2008a&gt;&lt;/a&gt;[Florida, Gulden, and Mellander (2008)](#bib-floridaRiseMegaregion2008a)) but can it be applied to estimate the extent of economic activity?
+* Mellander et al. attempt to calculate local economic activity in Sweden using light emissions data
+  * Find it is a better indicator of urbanisation than economic activity, for which it is more weakly correlated.
+
+* Better tool for estimating population than any daytime datasets - [Mellander, Lobo, Stolarick et al. (2015)](#bib-mellanderNightTimeLightData2015))
 ]
 
+
 ---
+class: title-slide, top, left, inverse
+background-image: url('img/Lights.png')
+background-size: cover
 
 # Reflection
+
+### Most of my previous experience with VIIRS was exclusively working with the light emissions band on board
+
+### The high spectral and temporal resolution with a specific focus on environmental variables makes VIIRS an incredible sensing tool which, in my opinion, often flies under the radar in comparison to the more popular Landsat and Sentinel platforms
+
+### I'd be particularly interested in seeing how VIIRS can be deployed as a marine monitoring tool and investigate how its ocean colour and sea surface temperature capabilities could be used in climate studies.
+
+Image from &lt;a name=cite-nasaEOSDISWorldview&gt;&lt;/a&gt;[NASA (2024c)](#bib-nasaEOSDISWorldview)
 
 ---
 
 # References
 
+&lt;a name=bib-floridaRiseMegaregion2008a&gt;&lt;/a&gt;[Florida, R., T. Gulden, and
+C. Mellander](#cite-floridaRiseMegaregion2008a) (2008). "The rise of
+the mega-region". In: _Cambridge Journal of Regions, Economy and
+Society_ 1.3, pp. 459-476.
 
+&lt;a name=bib-mellanderNightTimeLightData2015&gt;&lt;/a&gt;[Mellander, C., J.
+Lobo, K. Stolarick, et al.](#cite-mellanderNightTimeLightData2015)
+(2015). "Night-Time Light Data: A Good Proxy Measure for Economic
+Activity?" In: _PLOS ONE_ 10.10. Publisher: Public Library of Science,
+p. e0139779.
+
+&lt;a name=bib-nasaEOSDISWorldview&gt;&lt;/a&gt;[NASA](#cite-nasaEOSDISWorldview)
+(2024c). _EOSDIS Worldview_.
+
+&lt;a name=bib-nasaSVSActiveFires&gt;&lt;/a&gt;[NASA](#cite-nasaSVSActiveFires)
+(2024b). _SVS: Active Fires As Observed by VIIRS, 2020_.
+
+&lt;a name=bib-nasaSuomiNPPNASA&gt;&lt;/a&gt;[NASA](#cite-nasaSuomiNPPNASA)
+(2024a). _Suomi NPP - NASA Science_.
+
+&lt;a
+name=bib-noaaOurEarthNight2012&gt;&lt;/a&gt;[NOAA](#cite-noaaOurEarthNight2012)
+(2012). _Our Earth, at night_.
+
+&lt;a
+name=bib-noaaNOAATechnicalReport2013&gt;&lt;/a&gt;[NOAA](#cite-noaaNOAATechnicalReport2013)
+(2013). _NOAA Technical Report NESDIS 142_. Department of Commerce,
+United States of America.
+
+&lt;a name=bib-olivaAssessmentVIIRS375m2015&gt;&lt;/a&gt;[Oliva, P. and W.
+Schroeder](#cite-olivaAssessmentVIIRS375m2015) (2015). "Assessment of
+VIIRS 375m active fire detection product for direct burned area
+mapping". In: _Remote Sensing of Environment_ 160, pp. 144-155.
+
+&lt;a name=bib-usgsLPDAACVIIRS&gt;&lt;/a&gt;[USGS](#cite-usgsLPDAACVIIRS) (2024).
+_LP DAAC - VIIRS Overview_.
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
